Fixed dependencies and bumped up version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "deeplabcut-live"
-version = "1.0.4"
+version = "1.0.4.dev01"
 description = "Class to load exported DeepLabCut networks and perform pose estimation on single frames (from a camera feed)"
 authors = ["A. & M. Mathis Labs <admin@deeplabcut.org>"]
 license = "AGPL-3.0-or-later"
@@ -19,11 +19,11 @@ classifiers = [
 packages = [
     { include = "dlclive" }
 ]
-include = ["dlclive/check_install/*"]
+#include = ["dlclive/check_install/*"]
 
-[tool.poetry.scripts]
-dlc-live-test = "dlclive.check_install.check_install:main"
-dlc-live-benchmark = "dlclive.benchmark:main"
+#[tool.poetry.scripts]
+#dlc-live-test = "dlclive.check_install.check_install:main"
+#dlc-live-benchmark = "dlclive.benchmark:main"
 
 [tool.poetry.dependencies]
 python = ">=3.7.1,<3.11"
@@ -33,10 +33,8 @@ colorcet = "^3.0.0"
 Pillow = ">=8.0.0"
 py-cpuinfo = ">=5.0.0"
 tqdm = "^4.62.3"
-tensorflow = "^2.7.0,<=2.12"
-pandas = "^1.3"
+pandas = "<3.0.0"
 tables = "^3.6"
-opencv-python-headless = "^4.5"
 dlclibrary = ">=0.0.2"
 
 [tool.poetry.dev-dependencies]
